Regression: Multiresolution sculpt mode: Expand mask by topology cancellation bug #120934

Closed
opened 2024-04-22 14:43:15 +02:00 by inter_net · 3 comments

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.76

Blender Version
Broken: version: 4.1.1, branch: blender-v4.1-release, commit date: 2024-04-15 15:11, hash: e1743a0317bc
Worked: version: 3.6.11 LTS

Short description of error
Canceling "Expand mask by topology" operation causes strange mask pattern applied to mesh with Multiresolution in sculpt mode.

Exact steps for others to reproduce the error
While editing object in scuplt mode with Multiresolution Modifier (anything greater than subdivision 0), trying to perform "Expand mask by topology" operation via a short cut (Shift + A) or Mask menu seems to create a strange pattern when operation is canceled with right mouse button or esc.
The mask pattern mimicking the original mesh is applied, recorded in history, and can be undone. When I tested in version 3.6.11 it laks that issue.

[Based on the default startup or an attached .blend file (as simple as possible)]
I attached the video file with a short demonstration of this problem with factory settings in Blender 4.1.1 in comparison with the 3.6.11 version.

**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.76 **Blender Version** Broken: version: 4.1.1, branch: blender-v4.1-release, commit date: 2024-04-15 15:11, hash: `e1743a0317bc` Worked: version: 3.6.11 LTS **Short description of error** Canceling "Expand mask by topology" operation causes strange mask pattern applied to mesh with Multiresolution in sculpt mode. **Exact steps for others to reproduce the error** While editing object in scuplt mode with Multiresolution Modifier (anything greater than subdivision 0), trying to perform "Expand mask by topology" operation via a short cut (Shift + A) or Mask menu seems to create a strange pattern when operation is canceled with right mouse button or esc. The mask pattern mimicking the original mesh is applied, recorded in history, and can be undone. When I tested in version 3.6.11 it laks that issue. [Based on the default startup or an attached .blend file (as simple as possible)] I attached the video file with a short demonstration of this problem with factory settings in Blender 4.1.1 in comparison with the 3.6.11 version.
inter_net added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2024-04-22 14:43:16 +02:00
Iliya Katushenock added the
Interest
Modeling
Interest
Sculpt, Paint & Texture
labels 2024-04-22 18:10:12 +02:00
Iliya Katushenock changed title from Multiresolution sculpt mode: Expand mask by topology cancellation bug to Regression: Multiresolution sculpt mode: Expand mask by topology cancellation bug 2024-04-22 18:10:20 +02:00
Member

Can confirm. Looks like the mask values aren't properly cancelled.

Tested to be broken since at least 4.0 995aa08c79

Will bisect.

Can confirm. Looks like the mask values aren't properly cancelled. Tested to be broken since at least 4.0 995aa08c795 Will bisect.
YimingWu added
Module
Sculpt, Paint & Texture
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-04-23 04:04:27 +02:00
Member

4.0 at 74cc9f5738 is even more broke, the mask won't even show properly before cancelling...

Assuming 4.0 is broken from start. Will test 3.6 3.6 latest is still correct. so broken between 3.6 0d97ea8e3d and 4.0 74cc9f5738

image

4.0 at 74cc9f5738 is even more broke, the mask won't even show properly before cancelling... <s>Assuming 4.0 is broken from start. Will test 3.6</s> 3.6 latest is still correct. so broken between 3.6 0d97ea8e3dc25b20c0478b625209d75c1d014b19 and 4.0 74cc9f5738d ![image](/attachments/16be7a5d-72e3-471d-9110-06106761a594)
Member

This particular artifact in the screenshot in previous comment is caused by 97f2b01ea9 , and it seems to have never been fixed fully. @HooglyBoogly

This particular artifact in the screenshot in previous comment is caused by 97f2b01ea93b599a537d634e22 , and it seems to have never been fixed fully. @HooglyBoogly
YimingWu added
Priority
High
and removed
Priority
Normal
labels 2024-04-23 05:41:37 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-24 14:07:15 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-04-24 18:58:50 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120934
No description provided.