Fix #120934: Sculpt expand cancel broken with multires

Basically the same as 7d2d590f0e691771a19703eaa6c8c4b697dbb829